# wwivconfigtv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c.cmd  vcpkg.json
src/: app.cpp  app.h  commands.h  main.cpp  menu.cpp
